syntax = "proto3";


package chat_im;

import "base.proto";


option cc_generic_services =true;

//
//用于和网关通信
message NewMessageReq{
    string request_id =1;
    optional string user_id =2;
    optional string session_id =3;
    string chat_session_id =4;
    MessageContent message=5;
}
message NewMessageRsp{
    string request_id=1;
    bool success =2;
    string errmsg=3;
}


//
// 用于内部通信,生成完整消息信息,并获取消息的转发人员
message GetTransmitTargetRsp{
    string request_id =1;
    bool success =2;
    string errmsg=3;
    optional MessageInfo message=4;
    repeated string target_id_list=5;
}

service MsgTransmitService {
    rpc GetTransmitTarget(NewMessageReq) returns (GetTransmitTargetRsp);
}