syntax = "proto3";

package chat_im;
import "base.proto";

option cc_generic_services = true;

message ClientAuthenticationReq{
    string request_id =1;
    string session_id =2;
}